[package]
name = "rpi3fxproc"
version = "0.1.0"
authors = ["Richard A. Healy <rahealy@users.noreply.github.com>", "Andre Richter <andre.o.richter@gmail.com>", "bzt (bztsrc@github)"]
edition = "2018"

[dependencies]
cortex-a = "2.3.1"
register = "0.3.2"
r0 = "0.2.2"

# [dependencies.rpibmtkr]
# path = "rpibmtkr"
# 
# [dependencies.rpi3serbtldr]
# path = "rpi3serbtldr"
# 
# [dependencies.drivers]
# path = "drivers"
# 
[dependencies.peripherals]
path = "rpibmtkr/peripherals"

[dependencies.hats]
path = "rpibmtkr/hats"

[dependencies.startup]
path = "rpibmtkr/startup"
