[package]
name = "rpi3fxproc"
version = "0.1.0"
authors = ["Richard A. Healy <rahealy@users.noreply.github.com>", "Andre Richter <andre.o.richter@gmail.com>", "bzt (bztsrc@github)"]
edition = "2018"

[dependencies]
cortex-a = "2.3.1"
register = "0.3.2"
r0 = "0.2.2"
linked_list_allocator = "0.6.4"
libm = "0.2.0"

[dependencies.peripherals]
path = "hardware/peripherals"

[dependencies.hats]
path = "hardware/hats"

[dependencies.startup]
path = "hardware/startup"

[dependencies.rack]
path = "rack"

[dependencies.common]
path = "common"

[dependencies.i2squeue]
path = "i2squeue"
