[package]
name = "i2sdbuf"
version = "0.1.0"
authors = ["Richard A. Healy <rahealy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
cortex-a = "2.3.1"
register = "0.3.2"
r0 = "0.2.2"


[dependencies.peripherals]
path = "../hardware/peripherals"

[dependencies.common]
path = "../common"

[dependencies.rack]
path = "../rack"

