[package]
name = "rack"
version = "0.1.0"
authors = ["Richard A. Healy <rahealy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.effect]
path = "effect"

[dependencies.effects]
path = "effects"

[dependencies.common]
path = "../common"

[dependencies.peripherals]
path = "../hardware/peripherals"
