[package]
name = "rpibmtkr"
version = "0.1.0"
authors = ["Richard A. Healy <rahealy@users.noreply.github.com>", "Andre Richter <andre.o.richter@gmail.com>", "bzt (bztsrc@github)"]
description = "RaspberryPi Bare Metal Toolkit in Rust"
edition = "2018"

[dependencies]
cortex-a = "2.3.1"
register = "0.3.2"
r0 = "0.2.2"

[dependencies.drivers]
path = "drivers"

[dependencies.peripherals]
path = "peripherals"

[dependencies.hats]
path = "hats"
