[package]
name = "effects"
version = "0.1.0"
authors = ["Richard A. Healy <rahealy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
biquad = "0.3.0"

[dependencies.common]
path="../../common"


[dependencies.effect]
path="../effect"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]
